# ugent-line-proxy

./: .env.example  Cargo.toml  LICENSE  README.md  ugent-line-proxy.service
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUGFIX_PLAN.md  BUG_REPORT.md  DATABASE_RETRY.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_RMS_PLAN.md  FEATURES.md  MESSAGE_TYPES_VERIFICATION.md  QUICK_START.md  RMS_CLI_API_GUIDE.md  RMS_IMPLEMENTATION_STATUS.md  UPGRADE_PLAN_V2.md  WEBSOCKET_PROTOCOL.md
docs/plans/: 2026-03-18-data-retention-retry.md
src/: broker.rs  config.rs  error.rs  file_hosting.rs  lib.rs  line_api.rs  main.rs  types.rs  ws_manager.rs
src/db/: config.rs  contacts.rs  error.rs  groups.rs  inbound_queue.rs  messages.rs  metrics.rs  migration.rs  mod.rs  outbound_queue.rs  postgres.rs  sqlite.rs
src/retry/: inbound.rs  mod.rs  outbound.rs
src/rms/: api.rs  cli.rs  mod.rs  service.rs  storage.rs  types.rs
src/storage/: dedup.rs  metrics.rs  mod.rs  ownership.rs  pending.rs  schema.rs
src/webhook/: mod.rs  parser.rs  signature.rs
tests/: db_test.rs  e2e_test.rs  retry_test.rs
