[package]
name = "ugent-line-proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto for signature verification
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2.6"

# UUID
uuid = { version = "1.16", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI (for rms-cli)
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Storage (SQLite persistence)
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[[bin]]
name = "ugent-line-proxy"
path = "src/main.rs"

[[bin]]
name = "rms-cli"
path = "src/bin/rms-cli.rs"

# Debian package configuration
[package.metadata.deb]
maintainer = "UGENT Team"
copyright = "2026, UGENT Team"
license-file = ["LICENSE", "0"]
extended-description = """LINE Messaging API proxy server for UGENT.
Connects LINE Platform webhooks to local UGENT instances via WebSocket."""
depends = "libc6 (>= 2.17)"
section = "net"
priority = "optional"
assets = [
    ["target/release/ugent-line-proxy", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ugent-line-proxy/", "644"],
    [".env.example", "usr/share/ugent-line-proxy/", "644"],
    ["ugent-line-proxy.service", "lib/systemd/system/", "644"],
]
conf-files = ["/etc/ugent-line-proxy/.env"]
